@@ -67,7 +67,7 @@ pub type ReadDevFormatsCb = extern "C" fn(c: *mut ContextInternal, info: *const 
 impl DeviceRestore {
     /// Create a new `DeviceManager` from an existing
     /// [`ContextInternal`](../struct.ContextInternal.html) pointer.
-    pub fn from_raw(context: *mut ContextInternal) -> Self {
+    fn from_raw(context: *mut ContextInternal) -> Self {
         Self { context: context, weak: false }
     }
 
