@@ -41,7 +41,7 @@ pub type DeferEventDestroyCb = extern "C" fn(a: *mut MainloopApi, e: *mut DeferE
 impl<T> DeferEvent<T>
     where T: MainloopInnerType
 {
-    pub fn from_raw(ptr: *mut DeferEventInternal, mainloop_inner: Rc<T>) -> Self {
+    pub(crate) fn from_raw(ptr: *mut DeferEventInternal, mainloop_inner: Rc<T>) -> Self {
         assert_eq!(false, ptr.is_null());
         Self { ptr: ptr, owner: mainloop_inner }
     }
