@@ -60,7 +60,7 @@ pub type IoEventDestroyCb = extern "C" fn(a: *mut MainloopApi, e: *mut IoEventIn
 impl<T> IoEvent<T>
     where T: MainloopInnerType
 {
-    pub fn from_raw(ptr: *mut IoEventInternal, mainloop_inner: Rc<T>) -> Self {
+    pub(crate) fn from_raw(ptr: *mut IoEventInternal, mainloop_inner: Rc<T>) -> Self {
         assert_eq!(false, ptr.is_null());
         Self { ptr: ptr, owner: mainloop_inner }
     }
